Rendering a Render Layer from another scene doesn't update/wrong size #37261

Closed
opened 2013-10-30 12:18:40 +01:00 by Pablo Vazquez · 4 comments
Member

%%%This is mainly about not updating, but also list another one related to scene % size.

Render doesn't update:

  • Open attached .blend
  • On node editor, click on the render button on the renderlayer
  • The render doesn't update while rendering (perhaps is too fast on some machines to notice), the little yellow corners on tiles don't appear either.

The other bug:
After render, the result is using the scene 25% percentage size from the original scene (scene_first), not the one it was rendered from (100%, scene_second). Perhaps this is a workflow decision, but it can get very annoying when dealing with multiple scenes, especially when linked from files other people are working on.

Happens on current trunk.

Linux Mint 15, NVIDIA GTX 580

Thanks!

%%%

%%%This is mainly about not updating, but also list another one related to scene % size. Render doesn't update: - Open attached .blend - On node editor, click on the render button on the renderlayer - The render doesn't update while rendering (perhaps is too fast on some machines to notice), the little yellow corners on tiles don't appear either. The other bug: After render, the result is using the scene 25% percentage size from the original scene (scene_first), not the one it was rendered from (100%, scene_second). Perhaps this is a workflow decision, but it can get very annoying when dealing with multiple scenes, especially when linked from files other people are working on. Happens on current trunk. Linux Mint 15, NVIDIA GTX 580 Thanks! %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Render Result not updating is because the scene pointer in SpaceImage->iuser is used to look up the render result buffer to display for the IMA_TYPE_R_RESULT image type. This pointer is set correctly for the render job, but the image space used for the display always takes this from context, i.e. will show the (empty) result from the active scene instead of the rendered scene.

I have attached a patch which explicitly sets the ImageUser->scene pointer in render jobs and fixes the problem. However, i'm not sure if this leaves undefined cases where a wrong scene pointer will be used in image editor, because i have to disable the automatic sima->iuser.scene update in image_main_area_draw for render result images (otherwise the pointer set by render jobs will just get overwritten on every draw).

As for the size discrepancy: This is a design problem with the way render settings are stored directly in scenes. Each scene has it's own settings and they can not be shared directly. But there is a nice addon by Bastien Montagne (mont29) which should help to work around the issue:
http://wiki.blender.org/index.php/Extensions:2.6/Py/Scripts/Render/Copy_Settings%%%

%%%Render Result not updating is because the scene pointer in SpaceImage->iuser is used to look up the render result buffer to display for the IMA_TYPE_R_RESULT image type. This pointer is set correctly for the render job, but the image space used for the display *always* takes this from context, i.e. will show the (empty) result from the active scene instead of the rendered scene. I have attached a patch which explicitly sets the ImageUser->scene pointer in render jobs and fixes the problem. However, i'm not sure if this leaves undefined cases where a wrong scene pointer will be used in image editor, because i have to disable the automatic sima->iuser.scene update in image_main_area_draw for render result images (otherwise the pointer set by render jobs will just get overwritten on every draw). As for the size discrepancy: This is a design problem with the way render settings are stored directly in scenes. Each scene has it's own settings and they can not be shared directly. But there is a nice addon by Bastien Montagne (mont29) which should help to work around the issue: http://wiki.blender.org/index.php/Extensions:2.6/Py/Scripts/Render/Copy_Settings%%%
Member

%%%Fixed in SVN now. The image editor will now always display the rendering scene during render jobs, to give the desired feedback.%%%

%%%Fixed in SVN now. The image editor will now always display the rendering scene during render jobs, to give the desired feedback.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37261
No description provided.